fix overflow of chat board

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,7 @@ body{
 	border-width: 8px;
 	line-height: 20px;
 	font-size: 12px;
+	overflow: auto;
 }
 
 .messageBoard > div{
@@ -30,7 +31,7 @@ body{
 }
 
 .postArea > textarea{
-	margin: 0 0;
+	margin-left: 10px;
 	width: inherit;
 	border-color: black;
 	border-width: 1;
